--- a/LSystemGym/LSystemGym.vcxproj
+++ b/LSystemGym/LSystemGym.vcxproj
@@ -128,10 +128,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Lsystem.cpp" />
+    <ClCompile Include="src\LSystemVisualizer.cpp" />
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Lsystem.h" />
+    <ClInclude Include="src\LSystemVisualizer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
