included rlmgui and raylib

--- a/LSystemGym/LSystemGym.vcxproj
+++ b/LSystemGym/LSystemGym.vcxproj
@@ -76,6 +76,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>D:\dirs\Code\CPP\Rays\LSystemGym\LSystemGym\dependencies\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -90,6 +91,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>D:\dirs\Code\CPP\Rays\LSystemGym\LSystemGym\dependencies\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -104,6 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>D:\dirs\Code\CPP\Rays\LSystemGym\LSystemGym\dependencies\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -118,6 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>D:\dirs\Code\CPP\Rays\LSystemGym\LSystemGym\dependencies\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -127,11 +131,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\rlImGui.cpp" />
     <ClCompile Include="src\Lsystem.cpp" />
     <ClCompile Include="src\LSystemVisualizer.cpp" />
     <ClCompile Include="src\Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="dependencies\include\extras\FA6FreeSolidFontData.h" />
+    <ClInclude Include="dependencies\include\extras\IconsFontAwesome6.h" />
+    <ClInclude Include="dependencies\include\imgui_impl_raylib.h" />
+    <ClInclude Include="dependencies\include\rlImGui.h" />
+    <ClInclude Include="dependencies\include\rlImGuiColors.h" />
     <ClInclude Include="src\Lsystem.h" />
     <ClInclude Include="src\LSystemVisualizer.h" />
   </ItemGroup>
