UI abstracterd as controller

--- a/LSystemGym/LSystemGym.vcxproj.filters
+++ b/LSystemGym/LSystemGym.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="src\rlImGui.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\LSystemController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Lsystem.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="dependencies\include\extras\IconsFontAwesome6.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LSystemController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
