--- a/LSystemGym/LSystemGym.vcxproj
+++ b/LSystemGym/LSystemGym.vcxproj
@@ -131,6 +131,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\LSystemController.cpp" />
     <ClCompile Include="src\rlImGui.cpp" />
     <ClCompile Include="src\Lsystem.cpp" />
     <ClCompile Include="src\LSystemVisualizer.cpp" />
@@ -143,6 +144,7 @@
     <ClInclude Include="dependencies\include\rlImGui.h" />
     <ClInclude Include="dependencies\include\rlImGuiColors.h" />
     <ClInclude Include="src\Lsystem.h" />
+    <ClInclude Include="src\LSystemController.h" />
     <ClInclude Include="src\LSystemVisualizer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
