--- a/LSystemGym/LSystemGym.vcxproj
+++ b/LSystemGym/LSystemGym.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\LSystemController.cpp" />
+    <ClCompile Include="src\LSystemPreset.cpp" />
     <ClCompile Include="src\rlImGui.cpp" />
     <ClCompile Include="src\Lsystem.cpp" />
     <ClCompile Include="src\LSystemVisualizer.cpp" />
@@ -145,6 +146,7 @@
     <ClInclude Include="dependencies\include\rlImGuiColors.h" />
     <ClInclude Include="src\Lsystem.h" />
     <ClInclude Include="src\LSystemController.h" />
+    <ClInclude Include="src\LSystemPreset.h" />
     <ClInclude Include="src\LSystemVisualizer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
