--- a/LSystemGym/LSystemGym.vcxproj.filters
+++ b/LSystemGym/LSystemGym.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="src\LSystemPreset.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\LSystemCamera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Lsystem.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\LSystemPreset.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\LSystemCamera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
